@@ -64,7 +64,7 @@ public class FiltrationPlantScreen
 
         //Remove trailing empty line
         if(!components.isEmpty())
-            components.remove(components.size() - 1);
+            components.removeLast();
 
         guiGraphics.renderTooltip(font, components, Optional.empty(), mouseX, mouseY);
     }
